Fix some puavo-bootserver dependencies.

--- a/debs/puavo-os/debian/control
+++ b/debs/puavo-os/debian/control
@@ -225,11 +225,12 @@ Depends: ${misc:Depends},
  hplip,
  iftop,
  iperf,
- iproute,
+ iproute2,
  isc-dhcp-server,
  jq,
  libsasl2-modules-gssapi-mit,
- libvirt-bin,
+ libvirt-clients,
+ libvirt-daemon,
  logrotate,
  lynx,
  nbd-server,
