Add nbd to the build (with a patch for https://github.com/NetworkBlockDevice/nbd/issues/96).

--- a/debs/Makefile
+++ b/debs/Makefile
@@ -11,6 +11,7 @@ _pkgs_ports     := fluentd         \
                    gvfs            \
                    linux           \
                    mutter          \
+                   nbd             \
                    nwjs            \
                    openboard       \
                    openldap        \
