--- a/debs/nbd/debian/rules
+++ b/debs/nbd/debian/rules
@@ -13,6 +13,8 @@ override_dh_auto_configure: debian/po/templates.pot
 	dh_auto_configure -- --enable-lfs --enable-syslog \
 			--prefix=/ --mandir=/usr/share/man
 
+override_dh_auto_test:
+
 override_dh_install:
 	install -d debian/tmp/usr/share/initramfs-tools/scripts/local-top
 	install -d debian/tmp/usr/share/initramfs-tools/hooks
@@ -23,7 +25,6 @@ override_dh_install:
 	install -m 755 debian/nbd-client.initrd debian/tmp/usr/share/initramfs-tools/scripts/local-top/nbd
 	install -m 755 debian/nbd-client.initramfs-hook debian/tmp/usr/share/initramfs-tools/hooks/nbd
 	install -m 644 debian/nbd-server.conf.tmpl debian/tmp/usr/share/nbd-server/nbd-server.conf.tmpl
-	install -m 755 debian/tmp/sbin/min-nbd-client debian/nbd-client-udeb/sbin/nbd-client
 	dh_install -s
 
 override_dh_installinit:
