Work-in-progress version of "papercut" as a puavo-pkg package. Unpacking and "papercut"-user creation works, maybe.

--- a/parts/pkg/packages/Makefile
+++ b/parts/pkg/packages/Makefile
@@ -62,6 +62,7 @@ packagedirs += vstloggerpro
 packagedirs += av4kav
 packagedirs += ekapeli
 packagedirs += mimio-studio
+packagedirs += papercut
 packagedirs += teddybear
 packagedirs += ti-nspire-cx-cas-ss
 packagedirs += vmware-horizon-client
