--- a/debs/nbd/debian/control
+++ b/debs/nbd/debian/control
@@ -2,10 +2,10 @@ Source: nbd
 Section: admin
 Priority: optional
 Maintainer: Wouter Verhelst <wouter@debian.org>
-Build-Depends: debhelper (>= 9), libglib2.0-dev (>= 2.26.0), libgnutls28-dev
-Standards-Version: 3.9.4
-Vcs-Git: git://anonscm.debian.org/users/wouter/nbd.git
-Vcs-Browser: http://git.debian.org/?p=users/wouter/nbd.git;a=summary
+Build-Depends: debhelper (>= 9), libglib2.0-dev (>= 2.26.0), libgnutls28-dev, libnl-genl-3-dev [linux-any], docbook-utils
+Standards-Version: 4.1.3
+Vcs-Git: https://salsa.debian.org/wouter/nbd.git
+Vcs-Browser: https://salsa.debian.org/wouter/nbd
 Homepage: http://nbd.sourceforge.net/
 
 Package: nbd-server
