Add support for puavo.admin.logging.firewall puavo-conf variable, that allows setting the logging policy for bootserver firewall.

--- a/rules/bootserver_firewall/files/etc_shorewall/shorewall.conf
+++ b/rules/bootserver_firewall/files/etc_shorewall/shorewall.conf
@@ -45,27 +45,27 @@ LOG_VERBOSITY=2
 
 LOGALLNEW=
 
-LOGFILE=/var/log/messages
+LOGFILE=/var/log/shorewall.log
 
-LOGFORMAT="Shorewall:%s:%s:"
+LOGFORMAT="%s:%s:"
 
 LOGTAGONLY=No
 
 LOGLIMIT=
 
-MACLIST_LOG_LEVEL=info
+MACLIST_LOG_LEVEL=$PUAVO_DEFAULT_LOG_LEVEL
 
 RELATED_LOG_LEVEL=
 
-RPFILTER_LOG_LEVEL=info
+RPFILTER_LOG_LEVEL=$PUAVO_DEFAULT_LOG_LEVEL
 
-SFILTER_LOG_LEVEL=info
+SFILTER_LOG_LEVEL=$PUAVO_DEFAULT_LOG_LEVEL
 
-SMURF_LOG_LEVEL=info
+SMURF_LOG_LEVEL=$PUAVO_DEFAULT_LOG_LEVEL
 
 STARTUP_LOG=/var/log/shorewall-init.log
 
-TCP_FLAGS_LOG_LEVEL=info
+TCP_FLAGS_LOG_LEVEL=$PUAVO_DEFAULT_LOG_LEVEL
 
 UNTRACKED_LOG_LEVEL=
 
