--- a/rules/bootserver_firewall/files/etc_shorewall/shorewall.conf
+++ b/rules/bootserver_firewall/files/etc_shorewall/shorewall.conf
@@ -49,27 +49,27 @@ LOG_ZONE=Both
 
 LOGALLNEW=
 
-LOGFILE=/var/log/messages
+LOGFILE=/var/log/shorewall.log
 
-LOGFORMAT="%s %s "
+LOGFORMAT="%s:%s:"
 
 LOGTAGONLY=No
 
 LOGLIMIT="s:1/sec:10"
 
-MACLIST_LOG_LEVEL="$LOG_LEVEL"
+MACLIST_LOG_LEVEL=$PUAVO_DEFAULT_LOG_LEVEL
 
 RELATED_LOG_LEVEL=
 
-RPFILTER_LOG_LEVEL="$LOG_LEVEL"
+RPFILTER_LOG_LEVEL=$PUAVO_DEFAULT_LOG_LEVEL
 
-SFILTER_LOG_LEVEL="$LOG_LEVEL"
+SFILTER_LOG_LEVEL=$PUAVO_DEFAULT_LOG_LEVEL
 
-SMURF_LOG_LEVEL="$LOG_LEVEL"
+SMURF_LOG_LEVEL=$PUAVO_DEFAULT_LOG_LEVEL
 
 STARTUP_LOG=/var/log/shorewall-init.log
 
-TCP_FLAGS_LOG_LEVEL="$LOG_LEVEL"
+TCP_FLAGS_LOG_LEVEL=$PUAVO_DEFAULT_LOG_LEVEL
 
 UNTRACKED_LOG_LEVEL=
 
