Make changes to /etc/ulogd.conf.

--- a/rules/bootserver_firewall/files/ulogd.conf
+++ b/rules/bootserver_firewall/files/ulogd.conf
@@ -27,28 +27,28 @@ loglevel=3
 plugin="/usr/lib/x86_64-linux-gnu/ulogd/ulogd_inppkt_NFLOG.so"
 #plugin="/usr/lib/x86_64-linux-gnu/ulogd/ulogd_inppkt_ULOG.so"
 #plugin="/usr/lib/x86_64-linux-gnu/ulogd/ulogd_inppkt_UNIXSOCK.so"
-plugin="/usr/lib/x86_64-linux-gnu/ulogd/ulogd_inpflow_NFCT.so"
+#plugin="/usr/lib/x86_64-linux-gnu/ulogd/ulogd_inpflow_NFCT.so"
 plugin="/usr/lib/x86_64-linux-gnu/ulogd/ulogd_filter_IFINDEX.so"
 plugin="/usr/lib/x86_64-linux-gnu/ulogd/ulogd_filter_IP2STR.so"
-plugin="/usr/lib/x86_64-linux-gnu/ulogd/ulogd_filter_IP2BIN.so"
+#plugin="/usr/lib/x86_64-linux-gnu/ulogd/ulogd_filter_IP2BIN.so"
 #plugin="/usr/lib/x86_64-linux-gnu/ulogd/ulogd_filter_IP2HBIN.so"
 plugin="/usr/lib/x86_64-linux-gnu/ulogd/ulogd_filter_PRINTPKT.so"
-plugin="/usr/lib/x86_64-linux-gnu/ulogd/ulogd_filter_HWHDR.so"
-plugin="/usr/lib/x86_64-linux-gnu/ulogd/ulogd_filter_PRINTFLOW.so"
+#plugin="/usr/lib/x86_64-linux-gnu/ulogd/ulogd_filter_HWHDR.so"
+#plugin="/usr/lib/x86_64-linux-gnu/ulogd/ulogd_filter_PRINTFLOW.so"
 #plugin="/usr/lib/x86_64-linux-gnu/ulogd/ulogd_filter_MARK.so"
 plugin="/usr/lib/x86_64-linux-gnu/ulogd/ulogd_output_LOGEMU.so"
-plugin="/usr/lib/x86_64-linux-gnu/ulogd/ulogd_output_SYSLOG.so"
-plugin="/usr/lib/x86_64-linux-gnu/ulogd/ulogd_output_XML.so"
+#plugin="/usr/lib/x86_64-linux-gnu/ulogd/ulogd_output_SYSLOG.so"
+#plugin="/usr/lib/x86_64-linux-gnu/ulogd/ulogd_output_XML.so"
 #plugin="/usr/lib/x86_64-linux-gnu/ulogd/ulogd_output_SQLITE3.so"
-plugin="/usr/lib/x86_64-linux-gnu/ulogd/ulogd_output_GPRINT.so"
+#plugin="/usr/lib/x86_64-linux-gnu/ulogd/ulogd_output_GPRINT.so"
 #plugin="/usr/lib/x86_64-linux-gnu/ulogd/ulogd_output_NACCT.so"
 #plugin="/usr/lib/x86_64-linux-gnu/ulogd/ulogd_output_PCAP.so"
 #plugin="/usr/lib/x86_64-linux-gnu/ulogd/ulogd_output_PGSQL.so"
 #plugin="/usr/lib/x86_64-linux-gnu/ulogd/ulogd_output_MYSQL.so"
 #plugin="/usr/lib/x86_64-linux-gnu/ulogd/ulogd_output_DBI.so"
 plugin="/usr/lib/x86_64-linux-gnu/ulogd/ulogd_raw2packet_BASE.so"
-plugin="/usr/lib/x86_64-linux-gnu/ulogd/ulogd_inpflow_NFACCT.so"
-plugin="/usr/lib/x86_64-linux-gnu/ulogd/ulogd_output_GRAPHITE.so"
+#plugin="/usr/lib/x86_64-linux-gnu/ulogd/ulogd_inpflow_NFACCT.so"
+#plugin="/usr/lib/x86_64-linux-gnu/ulogd/ulogd_output_GRAPHITE.so"
 #plugin="/usr/lib/x86_64-linux-gnu/ulogd/ulogd_output_JSON.so"
 
 # this is a stack for logging packet send by system via LOGEMU
@@ -145,8 +145,8 @@ hash_enable=0
 # netlink multicast group (the same as the iptables --nflog-group param)
 # Group O is used by the kernel to log connection tracking invalid message
 group=0
-#netlink_socket_buffer_size=217088
-#netlink_socket_buffer_maxsize=1085440
+netlink_socket_buffer_size=217088
+netlink_socket_buffer_maxsize=1085440
 # set number of packet to queue inside kernel
 #netlink_qthreshold=1
 # set the delay before flushing packet in the queue inside kernel (in 10ms)
@@ -183,7 +183,7 @@ nlgroup=1
 socket_path="/tmp/nuauth_ulogd2.sock"
 
 [emu1]
-file="/var/log/ulog/syslogemu.log"
+file="/var/log/shorewall.log"
 sync=1
 
 [op1]
