"firefox" --> "firefox-esr" so firefox shows up in Buster.

--- a/rules/puavomenu/templates/menudata/50-default.yml
+++ b/rules/puavomenu/templates/menudata/50-default.yml
@@ -169,7 +169,7 @@ programs:
         tags: default
 
   #F
-  - firefox:
+  - firefox-esr:
         name:
             en: Firefox-browser
             fi: Firefox-selain
@@ -987,7 +987,7 @@ menus:
             sv: Internet-program
             de: Internet Programme
         programs:
-            - firefox
+            - firefox-esr
             - chromium
             - google-chrome
             - thunderbird
