--- a/rules/puavomenu/templates/menudata/50-default.yml
+++ b/rules/puavomenu/templates/menudata/50-default.yml
@@ -366,7 +366,7 @@ programs:
   #M
   - mafynetti:
         tags: default, education
-  - mandelbulber:
+  - mandelbulber2:
         tags: default, education, science
   - MarvinSketch:
         tags: default
@@ -1080,7 +1080,7 @@ menus:
             - org.kde.kalzium
             - MarvinSketch
             - MarvinView
-            - mandelbulber
+            - mandelbulber2
             - qgis
             - anki
 
